# Job_Tracker

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml  README.md
backend/src/: db.rs  main.rs  models.rs  routes.rs
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: CreateJobForm.tsx  JobList.tsx  JobViewModal.tsx
